fix: the font-size of the title application was reduced so it can fit better on mobile devices

--- a/forms.css
+++ b/forms.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     gap: 1rem;
     
+
 }
 
 .form {
@@ -14,9 +15,6 @@
     border-radius: 0.4em;
     box-shadow: 0 0 0.8em 0.1em rgba(0, 0, 0, 0.205);
     background-color: white;
-    width: 40.5rem;
-    min-width: var(--screen-width);
-    
 }
 
 
@@ -29,7 +27,7 @@
     border: none;
     padding: 0.6rem 0rem 0.6rem 0.6rem;
     border-radius: 0.3em;
-    margin-left: 0.7rem;  
+    margin-left: 0.4rem;  
     background-color: #ececec;
     outline: none;
     cursor: text;
