--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@
     --screen-width: calc(var(--screen-height) * 0.46);
 }
 
+@media (max-width: 750px) {
+    /* :root {
+        --screen-width: 95vw;
+        --screen-height: 206vh;
+    } */
+
+   
+}
+
 html {
     font-size: 10px;
     font-family: 'Roboto', sans-serif;
@@ -46,7 +55,7 @@ body {
 .app-name {
     margin: 0;
     padding: 1rem;
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: monospace;
 }
 
@@ -55,19 +64,19 @@ body {
     color: white;
     padding: 0.3rem 0.7rem;
     border-radius: 1rem;
-    margin-right: -1.2rem;
+    margin-right: -0.7rem;
 
 }
 
 .app-header .contact {
     text-decoration: none;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-family: inherit;
     color:#2a2a2a;
     margin-right: 1.5rem;
     padding: 0.4rem 1.3rem;
     border-radius: 5rem;
-    background-color: #b3e3ff;
+    background-color: #d8d8d8;
 }
 
 
@@ -130,8 +139,6 @@ body {
 }
 
 .message-input {
-    /* line-height: 100%; */
-    padding-top: 3%;
     margin: 0;
     overflow-y: auto;
 }
